# server-side

./: .gitignore  Cargo.toml  docker-compose.yml  start-local-server.sh
src/: database.rs  entities.rs  lib.rs  main.rs
src/controllers/: account.rs  download.rs  license.rs  mod.rs  plugin.rs  update.rs
